--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
         <p class="game-result">YOU LOST🤦‍♀️</p>
     </div>
 
+    <div class="popup replay-popup">
+        <button class="replay-btn"><i class="fa fa-solid fa-rotate-right"></i></button>
+        <p class="game-result">Replay❓</p>
+    </div>
+
     <section class="bg">
         <div class="content">
             <button class="start-btn"><i class="fas fa-solid fa-play"></i></button>
+            <button class="stop-btn"><i class="fas fa-solid fa-square"></i></button>
             <p class="timer">00:00</p>
             <p class="count">0</p>
         </div>
