--- a/index.html
+++ b/index.html
@@ -10,21 +10,10 @@
     <script src="https://kit.fontawesome.com/ed86da0847.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="popup won-popup">
+    <div class="popup">
         <button class="replay-btn"><i class="fa fa-solid fa-rotate-right"></i></button>
         <p class="game-result">YOU WON🎉</p>
     </div>
-
-    <div class="popup lost-popup">
-        <button class="replay-btn"><i class="fa fa-solid fa-rotate-right"></i></button>
-        <p class="game-result">YOU LOST🤦‍♀️</p>
-    </div>
-
-    <div class="popup replay-popup">
-        <button class="replay-btn"><i class="fa fa-solid fa-rotate-right"></i></button>
-        <p class="game-result">Replay❓</p>
-    </div>
-
     <section class="bg">
         <div class="content">
             <button class="start-btn"><i class="fas fa-solid fa-play"></i></button>
